--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Digitales Handwerkszeug für Bibliothekar:innen - Ein Lerntagebuch
 author: Alisa Person
+Bibliotheks- und Informationsmanagement
 description: > # this means to ignore newlines until "baseurl:"
   Lerntagebuch zum Wahlkurs "Digitales Handwerkszeug für Bibliothekar:innen" an der HAW Hamburg
 
