--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Digitales Handwerkszeug für Bibliothekar:innen - Ein Lerntagebuch
+title: Digitales Handwerkszeug für Bibliothekar*innen - Ein Lerntagebuch
 author: Alisa Person
 description: > # this means to ignore newlines until "baseurl:"
-  Lerntagebuch zum Wahlkurs "Digitales Handwerkszeug für Bibliothekar:innen" an der HAW Hamburg
+  Lerntagebuch zum Wahlkurs "Digitales Handwerkszeug für Bibliothekar*innen" an der HAW Hamburg
 
 # social links
 twitter_username: alisa_per # DO NOT include the @ character, or else the build will fail!
